[gd_scene load_steps=15 format=3 uid="uid://b1icoukkbev5p"]

[ext_resource type="AudioStream" uid="uid://dwyynvm86wnqj" path="res://assets/sfx/player-death.wav" id="1_e2lcg"]
[ext_resource type="Script" path="res://scripts/audio_bus.gd" id="1_juh5h"]
[ext_resource type="AudioStream" uid="uid://bsiw5lt6jiata" path="res://assets/sfx/death.wav" id="2_f5hca"]
[ext_resource type="AudioStream" uid="uid://sygskp2dtltb" path="res://assets/sfx/box-move.wav" id="3_ocs2r"]
[ext_resource type="AudioStream" uid="uid://l3gbdphu5m2" path="res://assets/sfx/hover.wav" id="4_f6iyx"]
[ext_resource type="AudioStream" uid="uid://boo78uxuwyw4q" path="res://assets/sfx/select.wav" id="5_u5rea"]
[ext_resource type="AudioStream" uid="uid://bc52ve31cb3my" path="res://assets/sfx/reset.wav" id="6_i6vxr"]
[ext_resource type="AudioStream" uid="uid://c7i0x4ln308hy" path="res://assets/sfx/teleporter-active.wav" id="7_vwnot"]
[ext_resource type="AudioStream" uid="uid://dk4s55q720tjp" path="res://assets/sfx/teleporter-deactive.wav" id="8_pe8w7"]
[ext_resource type="AudioStream" uid="uid://cowsoslbk5vll" path="res://assets/sfx/teleport.wav" id="9_qyvw2"]
[ext_resource type="AudioStream" uid="uid://ussdb82cvlc8" path="res://assets/sfx/fire-shot.wav" id="10_0qc2y"]
[ext_resource type="AudioStream" uid="uid://c3bhym4nb140i" path="res://assets/sfx/robot-release.wav" id="11_ejk80"]
[ext_resource type="AudioStream" uid="uid://b8u6fsia2mbhw" path="res://assets/sfx/button-press.wav" id="12_aj4t4"]
[ext_resource type="AudioStream" uid="uid://cc8ebmv5ubygq" path="res://assets/sfx/button-release.wav" id="13_fxkat"]

[node name="AudioBus" type="Node"]
script = ExtResource("1_juh5h")

[node name="PlayerDeathSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_e2lcg")
max_polyphony = 2
bus = &"SFX"

[node name="RobotDeathSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_f5hca")
max_polyphony = 3
bus = &"SFX"

[node name="BoxMoveSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ocs2r")
volume_db = -2.0
max_polyphony = 6
bus = &"SFX"

[node name="MenuHoverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_f6iyx")
bus = &"SFX"

[node name="MenuSelectSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_u5rea")
bus = &"SFX"

[node name="LevelResetSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_i6vxr")
volume_db = -2.0
bus = &"SFX"

[node name="TeleporterActivateSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_vwnot")
max_polyphony = 3
bus = &"SFX"

[node name="TeleporterDeactivateSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_pe8w7")
max_polyphony = 3
bus = &"SFX"

[node name="TeleportSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_qyvw2")
bus = &"SFX"

[node name="ShotFiredSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_0qc2y")
max_polyphony = 2
bus = &"SFX"

[node name="RobotReleasedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ejk80")
max_polyphony = 2
bus = &"SFX"

[node name="ButtonPressedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_aj4t4")
max_polyphony = 6
bus = &"SFX"

[node name="ButtonReleasedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_fxkat")
max_polyphony = 6
bus = &"SFX"

[connection signal="finished" from="PlayerDeathSFX" to="." method="_on_player_death_sfx_finished"]
[connection signal="finished" from="RobotDeathSFX" to="." method="_on_robot_death_sfx_finished"]
[connection signal="finished" from="BoxMoveSFX" to="." method="_on_box_move_sfx_finished"]
[connection signal="finished" from="ShotFiredSFX" to="." method="_on_shot_fired_sfx_finished"]
[connection signal="finished" from="RobotReleasedSFX" to="." method="_on_robot_released_sfx_finished"]
